--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <div class="board"></div>
+    <div class="controls">
+        <button class="left">L</button>
+        <button class="up">U</button>
+        <button class="right">R</button>
+        <button class="down">D</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
