added popup and changing styles.feat game over

--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Pac-man Attempt</title>
+    <title>Start Page</title>
 </head>
 <body>
-    <div class="board"></div>
-    <div class="controls">
-        <button class="left">L</button>
-        <button class="up">U</button>
-        <button class="right">R</button>
-        <button class="down">D</button>
+    <div class="outside">
+    <div class="start">
+        <h2>Avoid the moving ghosts, and eat all the purple pellets!</h2>
+        <h4>Click start to begin.</h4>
+        <a href="PlayGame.html">
+        <button class="begin">Start</button>
+        </a>
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
