Addiing win popups and timers.

--- a/PlayGame.html
+++ b/PlayGame.html
@@ -15,6 +15,23 @@
         <button class="right">R</button>
         <button class="down">D</button>
     </div>
+     <div id="popup" class="popup">
+        <div class="popup-content">
+            <h2>Game Over</h2>
+            <p>You lost the game!</p>
+            <p class="time">Time: </p>
+            <button id="restartButton">Restart</button>
+        </div>
+    </div>
+    <div id="popupWin" class="popup">
+        <div class="popup-content">
+            <h2>Nice.</h2>
+            <p>You won the game!</p>
+            <p class="time">Time: </p>
+            <button id="restartButton">Restart</button>
+        </div>
+    </div>
+    <p class="clock"> </p>
     <script src="script.js"></script>
 </body>
 </html>
