fixed time error on win popup

--- a/PlayGame.html
+++ b/PlayGame.html
@@ -27,7 +27,7 @@
         <div class="popup-content">
             <h2>Nice.</h2>
             <p>You won the game!</p>
-            <p class="time">Time: </p>
+            <p class="time2">Time: </p>
             <button id="restartButton">Restart</button>
         </div>
     </div>
