Fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="outside">
     <div class="start">
-        <h2>Avoid the moving ghosts, and eat all the purple pellets!</h2>
+        <h2>Avoid the moving green ghosts, and eat all the black pellets!</h2>
         <h4>Click start to begin.</h4>
         <a href="PlayGame.html">
         <button class="begin">Start</button>
