--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <div class="outside">
     <div class="start">
         <h2>Avoid the moving green ghosts, and eat all the black pellets!</h2>
+        <label for="name">Your name: </label>
+        <input type="text" id="name">
         <h4>Click start to begin.</h4>
         <a href="PlayGame.html">
-        <button class="begin">Start</button>
+        <button class="begin" onclick="getName()">Start</button>
         </a>
     </div>
     </div>
